--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
-body {
-  margin: 0;
-}
+@import 'utils/variables';
+@import 'utils/mixins';
+
+@import 'helpers/container';
+
+@import 'blocks/header';
+@import 'blocks/page';
+@import 'blocks/swing-trade';
+@import 'blocks/main';
